--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ html, body {
     animation-duration: 5s;
     animation-direction: alternate;
     animation-delay: s;
-    animation-timing-function: ease-in; */
+    animation-timing-function: ease-in; 
     animation-iteration-count:infinite;
 }
 
